--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -1,15 +1,16 @@
-﻿@model IEnumerable<leave_management.Models.DetailsLeaveTypeViewModel>
+﻿@model IEnumerable<leave_management.Models.LeaveTypeViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Leave Types</h1>
+<hr />
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-success"><i class="fa fa-plus"></i> Create New</a>
 </p>
-<table class="table">
+<table id="tblData" class="table">
     <thead>
         <tr>
             <th>
@@ -18,7 +19,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.DateCreated)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -31,11 +32,16 @@
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id"> <i class="fa fa-pencil"></i></a>
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id"> <i class="fa fa-info"></i></a>
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record?')"> <i class="fa fa-trash"></i></a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+@section Scripts { 
+<script>
+
+</script>
+}
