--- a/leave-management/Views/Shared/_LoginPartial.cshtml
+++ b/leave-management/Views/Shared/_LoginPartial.cshtml
@@ -12,11 +12,14 @@
             <p>@User.Identity.Name!</p>
             </a>
     </li>
+    
     <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-        <i class="fas fa-sign-out-alt"></i>
-            <p>Log out</p>
-        </a>
+        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button type="submit" class="nav-link btn btn-link text-white">
+                <i class="fas fa-sign-out-alt"></i>
+                <p>Logout</p>
+            </button>
+        </form>
     </li>
 }
 else
